logs/sre-yield.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sre_yield'...
Compiling './lib/python3.5/site-packages/sre_yield/__init__.py'...
***   File "./lib/python3.5/site-packages/sre_yield/__init__.py", line 538
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sre_yield/tests'...
Compiling './lib/python3.5/site-packages/sre_yield/tests/test_bigrange.py'...
***   File "./lib/python3.5/site-packages/sre_yield/tests/test_bigrange.py", line 37
    print "expected", expected
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sre_yield/tests/test_fastdivmod.py'...
***   File "./lib/python3.5/site-packages/sre_yield/tests/test_fastdivmod.py", line 88
    bignum2 = 3268647867246256383381332100041691484373976788312974266629140102414955744756908184404049903032490380904202638084876187965749304595652472251350L
                                                                                                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sre_yield/tests/test_slicing.py'...
***   File "./lib/python3.5/site-packages/sre_yield/tests/test_slicing.py", line 55
    print "expected", expected
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sre_yield/tests/test_sre_yield.py'...
***   File "./lib/python3.5/site-packages/sre_yield/tests/test_sre_yield.py", line 39
    print list(v)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sre_yield-1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
